[package]
name = "silver-pow"
version = "2.5.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["pow", "mining", "consensus", "blockchain"]
categories = ["cryptography", "network-programming"]

[dependencies]
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-sharding = { path = "../silver-sharding" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

blake3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
rayon = { workspace = true }

bytes = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }
num_cpus = "1.16"
tracing-subscriber = { workspace = true }

[[bench]]
name = "pow_benchmarks"
harness = false
