[package]
name = "silver-pow"
version = "2.5.4"
edition = "2021"
rust-version = "1.90"
authors = ["SilverBitcoin Team <team@silverbitcoin.org>"]
license = "Apache-2.0"
repository = "https://github.com/silverbitcoin/silverbitcoin"
homepage = "https://silverbitcoin.org"
keywords = ["pow", "mining", "consensus", "blockchain"]
categories = ["cryptography", "network-programming"]
description = "Proof-of-Work consensus engine for SilverBitcoin 512-bit blockchain"

[dependencies]
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-storage = { path = "../silver-storage" }
silver-logging = { path = "../silver-logging" }

tokio = { version = "1.48", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"

tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"

bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# HTTP client for RPC
reqwest = { version = "0.12", features = ["json"] }

# HTTP/RPC Server
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Mining utilities
rand = "0.8"
num_cpus = "1.16"
hyper = "1.4"

# WebSocket support
tokio-tungstenite = "0.28"
futures-util = "0.3"
tungstenite = "0.28"

# Mining dependencies
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bin]]
name = "cpu-miner"
path = "src/bin/cpu_miner_real.rs"

[[bin]]
name = "stratum_pool"
path = "src/stratum_pool.rs"

[[bin]]
name = "slvrd"
path = "src/bin/node.rs"
